[package]
name = "llminus"
version = "0.1.0"
edition = "2024"
authors = ["Sasha Levin <sashal@kernel.org>"]
description = "LLM-powered git conflict resolution tool for the Linux kernel"
license = "GPL-2.0"
repository = "https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fastembed = "5"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
